# AntennaPattern

./: .gitignore  AntennaPattern_reference.md  CLAUDE.md  LICENSE  README.md  analysis.py  ant_io.py  conftest.py  digest.txt  install.py  manifest.in  pattern.py  polarization.py  pyproject.toml  setup.py  spherical_wave_expansion.md  test_subsample.py  utilities.py
.claude/: settings.local.json
example_tests/: coordinate_transforms.py  create_pattern_util.py  phase_center_and_mars.py  polarization_conversion.py  saving_and_loading.py
example_tests/output/: horn_pattern.npz  horn_pattern_ludwig3.cut
examples/: README.md  basic_tutorial_01.py  complex_workflow_turorial.py  scaling_example.py
examples/data/: sample_antenna.cut  sample_antenna.ffd  sample_pattern_simple.ffd  sample_ref_antenna.csv
examples/output/: tutorial_pattern.cut  tutorial_pattern.ffd  tutorial_pattern.npz
src/antenna_pattern/: __init__.py  analysis.py  ant_io.py  near_field.py  package_functions.py  pattern.py  pattern_functions.py  pattern_operations.py  plotting.py  polarization.py  spherical_expansion.py  utilities.py
src/antenna_pattern/gui/: __init__.py  analysis_tab.py  controls.py  main_window.py  nearfield_viewer.py  plot_widget.py  processing_tab.py  run_gui.py  swe_worker.py  view_tab.py
test_scripts/: README.md  gain_scaling.py  subsampling_example.py  synthetic_pattern_example.py
test_scripts/output/: horn_pattern_rhcp_lhcp.cut  horn_pattern_theta_phi.cut
tests/: __init__.py  test_antenna_pattern.py
